# embeutils

./: .cspell.yaml  .cspell.yml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  requirements.cmake
.github/workflows/: cpp_unit_tests.yml  generate_artifacts.yml  on_push.yml  unit_tests.yml
cmake/: embetech_git_utils.cmake  embeutils_install.cmake  install.cmake  requirements.cmake
doc/: CMakeLists.txt  embeutils.md
include/: CMakeLists.txt
include/embetech/: endianness.h  expect.h
src/: CMakeLists.txt
src/include/embetech/: compiler_support.h  endianness.h  expect.h  semantic_version.h
tests/: CMakeLists.txt  embeutils_ut.cpp  ut_compiler_support.cpp  ut_endianness.cpp  ut_expect.cpp  ut_expect_extra_off.cpp  ut_expect_extra_on.cpp  ut_expect_verbosity.cpp  ut_semver.cpp
tests/include/: embeutils_exception.hpp
